<resources>
    <string name="app_name">PokemonApp</string>
    <string name="network_error_message">Нет подключения к сети</string>
    <string name="toast_load_error_message">Ошибка загрузки</string>
    <string name="list_load_error">При загрузке списка возникла ошибка, проверьте сеть и попробуйте обновить список</string>
    <string name="pokemon_weight">Вес:</string>
    <string name="pokemon_height">Рост:</string>
    <string name="pokemon_type">Тип:</string>
    <string name="pokemon_hp">HP:</string>
    <string name="pokemon_attack">Атака:</string>
    <string name="pokemon_defense">Защита:</string>
    <string name="pokemon_special_attack">Специальная-атака:</string>
    <string name="pokemon_special_defense">Специальная-защита:</string>
    <string name="pokemon_speed">Скорость:</string>
    <string name="error_default_message">Что-то пошло не так! Попробуйте обновиться.</string>
    <string name="retry_button_text">Обновить</string>
</resources>